[MSE] media/media-source/media-source-tracks.html is crashy https://bugs.webkit.org/show_bug.cgi?id=134385

Reviewed by Eric Carlson.

Fix the refactoring error (self assignment) introduced by r170488.

* Modules/mediasource/SourceBuffer.cpp:
(WebCore::SourceBuffer::sourceBufferPrivateDidReceiveInitializationSegment):


Canonical link: https://commits.webkit.org/152375@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@170535 268f45cc-cd09-0410-ab3c-d52691b4dbfc